# bazel-nested-module-build-error-repro

./: MODULE.bazel  README.md  WORKSPACE
lib_a/: BUILD.bazel  MODULE.bazel  WORKSPACE
lib_a/java/src/com/test/: Main.java
