module(name = "lib_a", version = "0.0.1")

bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    artifact = "guava",
    group = "com.google.guava",
    version = "31.1-jre",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(
    maven,
    "maven",
)